--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,16 @@
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".RecyclerActivity"
+            android:label="@string/title_activity_recycler" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
