--- a/speedkit/build.gradle
+++ b/speedkit/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.happyfall.speedkitdemo"
         minSdkVersion 11
         targetSdkVersion 22
         versionCode 1
@@ -19,16 +18,7 @@ android {
     }
 }
 
-repositories{
-    flatDir{
-        dirs '../speedkit/build/outputs/aar'
-    }
-}
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile(name:'speedkit-debug', ext:'aar')
-    compile 'com.android.support:appcompat-v7:22.1.1'
-    compile "com.android.support:gridlayout-v7:22.1.1"
     compile "com.android.support:recyclerview-v7:22.1.1"
 }
