--- a/speedkit/build.gradle
+++ b/speedkit/build.gradle
@@ -1,24 +1,51 @@
 apply plugin: 'com.android.library'
 
+def version_code = 1
+def version_name = '0.1'
+
+ext {
+    PUBLISH_GROUP_ID = 'happyfall.speedkit'
+    PUBLISH_ARTIFACT_ID = 'speedkit'
+    PUBLISH_VERSION = version_name
+}
+
 android {
+
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
-
     defaultConfig {
         minSdkVersion 11
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        versionCode version_code
+        versionName version_name
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            libraryVariants.all { variant ->
+                variant.outputs.each { output ->
+                    def file = output.outputFile
+
+                    if (file.name.contains('release')){
+					     output.outputFile = new File(file.parent, file.name.replace(".aar", "-" + defaultConfig.versionName + ".aar"))
+					}
+                }
+            }
+
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:recyclerview-v7:22.1.1"
+    compile 'com.android.support:recyclerview-v7:22.1.1'
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.4' //version required
+}
+
+//To publish to JCenter
+apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
