--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,9 @@ repositories{
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile(name:'speedkit-debug', ext:'aar')
+    compile(group: 'happyfall.speedkit', name: 'speedkit', version: '0.1', ext: 'aar')
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile "com.android.support:gridlayout-v7:22.1.1"
     compile "com.android.support:recyclerview-v7:22.1.1"
+
 }
