Added Choice Modes

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':recyclerview-multiselect', ':speedkit', ':app'
-project(':recyclerview-multiselect').projectDir=new File('/recyclerview-multiselect')
+include ':recyclerview-multiselect',':speedkit', ':app'
+project(':recyclerview-multiselect').projectDir = new File(settingsDir, 'recyclerview-multiselect/recyclerview-multiselect')
