--- a/speedkit/build.gradle
+++ b/speedkit/build.gradle
@@ -48,6 +48,9 @@ task wrapper(type: Wrapper) {
 
 apply from: 'https://raw.githubusercontent.com/ArthurHub/release-android-library/master/android-release-aar.gradle'
 
+
 dependencies {
-    compile 'com.android.support:recyclerview-v7:22.1.1'
+//    compile 'com.android.support:recyclerview-v7:22.1.1'
+    compile project(':recyclerview-multiselect')
+
 }
