--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,18 +8,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".HomeActivity"
+            android:name=".DrawerActivity"
             android:label="@string/app_name" >
-        </activity>
-        <activity
-            android:name=".RecyclerActivity"
-            android:label="@string/title_activity_recycler" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
+        </activity>
+        <activity
+            android:name=".RecyclerActivity"
+            android:label="@string/title_activity_recycler" >
         </activity>
     </application>
 
