--- a/uiautomation/build.gradle
+++ b/uiautomation/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.library'
 
 def version_code = 1
-def version_name = '0.1'
+def version_name = '0.3'
 
 group  "com.speedui.android"
 archivesBaseName = "uiautomation"
-version  "0.2"
+version  "0.3-SNAPSHOT"
 
 android {
 
