--- a/uiautomation/build.gradle
+++ b/uiautomation/build.gradle
@@ -120,5 +120,6 @@ android.libraryVariants.all { variant ->
 }
 
 dependencies {
-    compile 'com.speedui.android:recyclerview-multiselect:0.1'
+    compile 'com.android.support:design:22.2.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
 }
