--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".DrawerAppCompactActivity"
+            android:name=".withactionbar.DrawerWithActionBarAppCompactActivity"
             android:label="@string/app_name" >
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+        <activity
+            android:name=".withtoolbar.DrawerWithToolBarAppCompactActivity"
+            android:label="@string/title_activity_toolbar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
