--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.android.databinding'
 
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.speedui.android.uiautomationdemo"
         minSdkVersion 11
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -24,6 +23,9 @@ android {
         abortOnError false
     }
 
+    dataBinding {
+        enabled = true
+    }
 }
 
 repositories{
@@ -38,8 +40,8 @@ dependencies {
     compile project(':uiautomation')
     //compile ('com.speedui.android:uiautomation:0.2-SNAPSHOT')
 
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile "com.android.support:gridlayout-v7:22.2.0"
-    compile "com.android.support:recyclerview-v7:22.2.0"
+    compile 'com.android.support:appcompat-v7:+'
+    compile "com.android.support:gridlayout-v7:+"
+    compile "com.android.support:recyclerview-v7:+"
 
 }
