--- a/uiautomation/build.gradle
+++ b/uiautomation/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.android.databinding'
 
 def version_code = 1
 def version_name = '0.4'
@@ -10,11 +9,11 @@ version  "0.4-SNAPSHOT"
 
 android {
 
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
     defaultConfig {
         minSdkVersion 7
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode version_code
         versionName version_name
     }
@@ -30,6 +29,9 @@ android {
         abortOnError false
     }
 
+    dataBinding {
+        enabled = true
+    }
 }
 
 task wrapper(type: Wrapper) {
@@ -121,6 +123,6 @@ android.libraryVariants.all { variant ->
 }
 
 dependencies {
-    compile 'com.android.support:design:22.2.0'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.android.support:design:+'
+    compile 'com.android.support:recyclerview-v7:+'
 }
