--- a/uiautomation/src/main/AndroidManifest.xml
+++ b/uiautomation/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.speedui.android.uiautomation">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.speedui.android.uiautomation">
 
     <application android:allowBackup="true">
-
+        <activity android:name=".toolbar.SPToolbarActivity"></activity>
     </application>
 
 </manifest>
