Activity and Fragments with Drawer, Toolbar and Tabs made easier.
Change-Id: I3fe325017bcb6413e2497ef316c699526e81d4a6

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,7 @@ dependencies {
 
     compile project(':swiftui')
 
-    compile 'com.android.support:appcompat-v7:+'
+//    compile 'com.android.support:appcompat-v7:+'
     compile "com.android.support:gridlayout-v7:+"
-    compile "com.android.support:recyclerview-v7:+"
-    compile 'com.android.support:design:+'
+//    compile "com.android.support:recyclerview-v7:+"
 }
