--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.happyfall.android.demo.withtoolbar.DrawerToolbarActivity"
+            android:name=".withtoolbar.MainActivity"
             android:label="@string/title_activity_toolbar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
