--- a/swiftui/build.gradle
+++ b/swiftui/build.gradle
@@ -3,12 +3,11 @@ apply plugin: 'com.android.library'
 def version_code = 1
 def version_name = '0.5'
 
-group  "com.speedui.android"
-archivesBaseName = "uiautomation"
+group  "com.happyfall.android"
+archivesBaseName = "swiftui"
 version  "0.5-SNAPSHOT"
 
 android {
-
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
     defaultConfig {
@@ -17,20 +16,19 @@ android {
         versionCode version_code
         versionName version_name
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     lintOptions {
         abortOnError false
     }
-
     dataBinding {
         enabled = true
+    }
+    productFlavors {
     }
 }
 
@@ -123,5 +121,7 @@ android.libraryVariants.all { variant ->
 }
 
 dependencies {
+    compile 'com.android.support:appcompat-v7:+'
     compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:design:+'
 }
