Build Tools version updated
Change-Id: Idbb21d6f19d3ec0f3b378b059176ca4eb5d75e2d

--- a/swiftui/build.gradle
+++ b/swiftui/build.gradle
@@ -9,7 +9,7 @@ version  "0.5-SNAPSHOT"
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 23
@@ -121,7 +121,7 @@ android.libraryVariants.all { variant ->
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:+'
-    compile 'com.android.support:recyclerview-v7:+'
-    compile 'com.android.support:design:+'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
 }
