Android Support Library updated to 25.4.0
Change-Id: I80ae459515da79320c0fb99596ea64319ae45c2f

--- a/swiftui/build.gradle
+++ b/swiftui/build.gradle
@@ -37,11 +37,14 @@ repositories {
     maven {
         url "https://jitpack.io"
     }
+    maven{
+        url "https://maven.google.com"
+    }
 }
 
 dependencies {
     //https://developer.android.com/topic/libraries/support-library/revisions.html
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.support:recyclerview-v7:25.3.0'
-    compile 'com.android.support:design:25.3.0'
+    compile 'com.android.support:appcompat-v7:25.4.0'
+    compile 'com.android.support:recyclerview-v7:25.4.0'
+    compile 'com.android.support:design:25.4.0'
 }
