--- a/swiftui/build.gradle
+++ b/swiftui/build.gradle
@@ -9,7 +9,7 @@ version  "0.5-SNAPSHOT"
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 25
