compile replaced with implementation
Change-Id: I383b2c43b45f7e07ff90488d16882e3cd10e20fe

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':swiftui')
+    implemetation fileTree(dir: 'libs', include: ['*.jar'])
+    implemetation project(':swiftui')
 }
