--- a/swiftui/build.gradle
+++ b/swiftui/build.gradle
@@ -52,5 +52,6 @@ dependencies {
     //Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     //Rx
-    implementation "io.reactivex.rxjava2:rxkotlin:$rx_kotlin"
+    implementation "com.github.ReactiveX:RxKotlin:$rx_kotlin"
+
 }
