--- a/swiftui/build.gradle
+++ b/swiftui/build.gradle
@@ -53,5 +53,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     //Rx
     implementation "com.github.ReactiveX:RxKotlin:$rx_kotlin"
-
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
 }
